# self-llm

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: llm.py
backend/app/clients/: __init__.py  ollama_client.py
backend/app/core/: config.py
backend/app/models/: llm_model.py
backend/app/schemas/: llm.py
backend/app/services/: llm_service.py
day2/: embed_basic.py
frontend/: README.md  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: llm.ts
frontend/src/types/: index.ts
